--- a/src/global/app.scss
+++ b/src/global/app.scss
@@ -58,6 +58,10 @@ select {
   }
   &__text-area {
     height: 6rem;
+    &--disabled{      
+      color: #444;
+      background: #bbb;
+    }
   }
   &__checkboxes {
     background: white;
@@ -104,8 +108,16 @@ button{
   cursor: pointer;
   font-size: 1.2rem;
 
-  &:active {
+  &:active, &.selected {
       background: #8A6A4A;
       border-color: #724E29;
   }
+}
+.quiz-question{
+  margin: 1rem 0;
+  font-family: verdana;
+  padding: 1rem;
+  background: rgba(255,255,255,.2);
+  border-radius: 7px;
+  border: 4px dashed #8e9394;
 }
